Fix scrollbar in sessions and tab, improve UI

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,12 +8,17 @@
   }
 }
 
+html,
 body {
-  @apply text-neutral-2 bg-neutral-1 font-sans fade;
+  @apply min-h-[500px] h-full overflow-hidden;
+}
+
+body {
+  @apply mx-auto container px-4 py-2 text-neutral-2 bg-neutral-1 font-sans scroll-smooth fade;
 }
 
 #root {
-  @apply mx-auto min-w-[700px] min-h-[500px] max-w-[90vw] max-h-[90vh] h-full w-full px-4 py-2;
+  @apply min-h-[500px] max-h-[90vh] h-full;
 }
 
 h1 {
